Project

General

Profile

Actions

Bug #52305

closed

ceph_assert: interrupt_cond<InterruptCond>.get() == interrupt_condition.get()

Added by chunmei liu over 2 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

crimson release build, when doing bin/rbd create fio_test --size 2G --image-format=2 --rbd_default_features=3, got this assert.

ERROR 2021-08-17 16:57:04,317 [shard 0] none - ../src/crimson/common/interruptible_future.h:130 : In function 'auto crimson::interruptible::internal::call_with_interruption_impl(crimson::interruptible::InterruptCondRef<InterruptCond>, Func&&, Args&& ...) [with InterruptCond = crimson::osd::IOInterruptCondition; Func = crimson::osd::ClientRequest::start()::<lambda()> mutable::<lambda(Ref<crimson::osd::PG>)> mutable::<lambda()>; Args = {}; crimson::interruptible::InterruptCondRef<InterruptCond> = seastar::lw_shared_ptr<crimson::osd::IOInterruptCondition>]', ceph_assert(s)
interrupt_cond<InterruptCond>.get() == interrupt_condition.get()
Aborting on shard 0.
Backtrace:
0# 0x000055A4FC009BAA in /home/chunmei/ceph/build/bin/crimson-osd
1# FatalSignal::signaled(int, siginfo_t constx%x
) in /home/chunmei/ceph/build/bin/crimson-osd
2# FatalSignal::install_oneshot_signal_handler<6>()::{lambda(int, siginfo_t*, void*)#1}::_FUN(int, siginfo_t*, void*) in /home/chunmei/ceph/build/bin/crimson-osd
3# 0x00007F69EDF411F0 in /lib/x86_64-linux-gnu/libpthread.so.0
4# gsignal in /lib/x86_64-linux-gnu/libc.so.6
5# abort in /lib/x86_64-linux-gnu/libc.so.6
6# ceph::__ceph_assert_fail(char const*, char const*, int, char const*) in /home/chunmei/ceph/build/bin/crimson-osd
7# 0x000055A4F82AB629 in /home/chunmei/ceph/build/bin/crimson-osd
8# 0x000055A4F82AC148 in /home/chunmei/ceph/build/bin/crimson-osd
9# 0x000055A4F82AD5A8 in /home/chunmei/ceph/build/bin/crimson-osd
10# 0x000055A4F82ADB0D in /home/chunmei/ceph/build/bin/crimson-osd
11# auto seastar::internal::future_invoke<seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&, boost::intrusive_ptr<crimson::osd::PG> >(seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&, boost::intrusive_ptr<crimson::osd::PG>&&) in /home/chunmei/ceph/build/bin/crimson-osd
12# void seastar::futurize<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > >::satisfy_with_result_of<seastar::future<boost::intrusive_ptr<crimson::osd::PG> >::then_impl_nrvo<seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>, seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > >(seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&&)::{lambda(seastar::internal::promise_base_with_type<seastar::bool_class<seastar::stop_iteration_tag> >&&, seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&, seastar::future_state<boost::intrusive_ptr<crimson::osd::PG> >&&)#1}::operator()(seastar::internal::promise_base_with_type<seastar::bool_class<seastar::stop_iteration_tag> >&&, seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&, seastar::future_state<boost::intrusive_ptr<crimson::osd::PG> >&&) const::{lambda()#1}>(seastar::internal::promise_base_with_type<seastar::bool_class<seastar::stop_iteration_tag> >&&, seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&&) in /home/chunmei/ceph/build/bin/crimson-osd
13# seastar::continuation<seastar::internal::promise_base_with_type<seastar::bool_class<seastar::stop_iteration_tag> >, seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>, seastar::future<boost::intrusive_ptr<crimson::osd::PG> >::then_impl_nrvo<seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>, seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > >(seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&&)::{lambda(seastar::internal::promise_base_with_type<seastar::bool_class<seastar::stop_iteration_tag> >&&, seastar::noncopyable_function<seastar::future<seastar::bool_class<seastar::stop_iteration_tag> > (boost::intrusive_ptr<crimson::osd::PG>&&)>&, seastar::future_state<boost::intrusive_ptr<crimson::osd::PG> >&&)#1}, boost::intrusive_ptr<crimson::osd::PG> >::run_and_dispose() in /home/chunmei/ceph/build/bin/crimson-osd

Actions #1

Updated by Xuehan Xu over 2 years ago

  • Assignee set to Xuehan Xu
Actions #2

Updated by Xuehan Xu over 2 years ago

  • Pull request ID set to 42841
Actions #3

Updated by Kefu Chai over 2 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Kefu Chai over 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF